# tzar-bot

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/skills/: ai-threat-testing.md  api-security.md  authentication.md  blockchain-security.md  client-side.md  cloud-containers.md  coordination.md  cve-poc-generator.md  cve-risk-score.md  dfir.md  essential-tools.md  github-workflow.md  hackerone.md  hackthebox.md  infrastructure.md  injection.md  mapt.md  osint.md  patt-fetcher.md  reconnaissance.md  red-team.md  script-generator.md  server-side.md  skill-update.md  social-engineering.md  source-code-scanning.md  system.md  techstack-identification.md  web-app-logic.md  web-chain.md  wireless.md
API/: README.md
BugBounty/: README.md
Cloud/: README.md
CodeReview/: README.md
DFIR/: README.md
MAPT/: README.md
Network/: README.md
RedTeam/: README.md
WAPT/: README.md
config/: env-allowlist.txt  headers.txt  safe-prefixes.txt  user-agents.txt
config/payloads/: lfi.txt  sqli.txt  ssrf.txt  waf-bypass.txt  xss.txt
data/atomic-red/: index.json
data/mitre/: enterprise.json  ics.json  mobile.json
docs/: autonomous-engagement-runner.md  fixes-backlog.md  lab-run-runbook.md  operations.md  orchestration-robustness-backlog.md  product-readiness-checklist.md  security-remediation-backlog.md  tool-conventions.md  tzar-bot-architecture.docx  tzar-bot-capability-report-2026-06-04.md  tzar-bot-capability-report-2026-06-26.md  usage-guide.md
docs/compliance/: CERT-In-CIGU-2026-0003-mapping.docx  CERT-In-CIGU-2026-0003-mapping.md
formats/: INDEX.md
skills/dfir/: SKILL.md
tools/: __init__.py  agent-supervisor.py  atomic-red.py  bughunter-sync.manifest.json  cli.py  concurrency.py  continuous-scan.py  coordinator-guard.py  engagement-runner.py  engagement-state.py  env-reader.py  gen-nuclei-template.py  generate-report.py  init-engagement.py  install-hunt-tooling.sh  lint-skills.py  long-run.py  mcp-server.py  md-to-docx.py  md-to-pdf.py  memory-search.py  mitre-lookup.py  notify.py  nvd-lookup.py  pathguard.py  playwright-mcp-server.py  preflight.py  rate-limiter.py  report-export.py  scope-check.py  scope.py  scrub-web-content.py  se-dashboard.py  session-memory.py  sync-bughunter.py  token-meter.py  validate-finding.py
(+115 files in other folders)
