[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tzar-bot"
description = "Scope-safe penetration-testing automation toolkit and Claude Code skill layer"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "1o1swapnil", email = "shreyash.dere@networkintelligence.ai" }]
keywords = [
    "security", "pentest", "penetration-testing", "bug-bounty",
    "offensive-security", "mcp", "claude-code", "automation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dynamic = ["version"]

# Core is STDLIB-FIRST: init/scope/state/memory/validation/report-export and the
# MCP servers run with zero third-party dependencies. Feature deps are extras.
dependencies = []

[project.optional-dependencies]
pdf = ["reportlab>=4.0", "Pillow>=10.0"]          # generate-report.py — PDF reports
docx = ["python-docx>=1.1"]                        # md-to-docx.py — DOCX export
browser = ["playwright>=1.40"]                     # playwright-mcp-server.py
# engagement-runner.py live loop — SDK must be new enough for output_config.format
# (structured outputs) + adaptive thinking + the current Opus/Sonnet model IDs.
runner = ["anthropic>=0.69"]
dev = ["pytest>=7.4"]
all = ["reportlab>=4.0", "Pillow>=10.0", "python-docx>=1.1", "playwright>=1.40", "anthropic>=0.69"]

[project.urls]
Homepage = "https://github.com/1o1swapnil/tzar-bot"
Repository = "https://github.com/1o1swapnil/tzar-bot"
Issues = "https://github.com/1o1swapnil/tzar-bot/issues"

[project.scripts]
tzar = "tools.cli:main"

[tool.setuptools]
# The tools are standalone scripts (hyphenated names, not importable modules),
# so ship the whole tools/ directory as package data rather than as modules.
packages = ["tools"]

[tool.setuptools.dynamic]
version = { attr = "tools.__version__" }

[tool.setuptools.package-data]
tools = ["*.py"]

[tool.setuptools.exclude-package-data]
tools = ["tests/*"]
